--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<h1 class="main__image-header">Is your pool ready for Summer?</h1>
 			<h3 class="main__image-subheader">A POOL PRO IS READY TO HELP!</h3>
 			<hr>
-			<span class="main__image-span">Choose a pro that's close to your home from the list below.</span>
+			<span class="main__image-tagline">Choose a pro that's close to your home from the list below.</span>
 	</main>
 
 	<!-- render the steps-->
